2011-02-07  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Creepy and Geany

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-07  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Creepy and Geany
+
 2011-01-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Change gslimp3 url
