--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-22  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads: fix typo
+
 2011-02-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Creepy and Geany
