2011-03-13  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Sunflower-fm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-13  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Sunflower-fm
+
 2011-02-22  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads: fix typo
