--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-11  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add PyGTK Book document from Peter Gill
+
 2011-05-10  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Update links to 2.24 (AIO and stable series)
