2011-06-21  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Darning and gwsmhg by Peter Williams

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-21  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Darning and gwsmhg by Peter Williams
+
 2011-06-11  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add PyGTK Book document by Peter Gill
