--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-21  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Naufrago! feed reader
+
 2011-06-21  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Darning and gwsmhg by Peter Williams
