--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 2011-08-05  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* articles/application-pygtk-glade: Update documentation links
+	and add missing images
 	* articles/applets_arturogf: Update documentation links
 	* about.src applications.src developer.src downloads.src
 	feedback.src index.src: Fix typos
