2011-08-05  Dieter Verfaillie  <dieterv@optionexplicit.be>
	* articles/pygtk-glade-gui: Update documentation links
	and add missing images

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 2011-08-05  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* articles/pygtk-glade-gui: Update documentation links
+	and add missing images
 	* articles/application-pygtk-glade: Add link to part one
 	* articles/custom-widgets-glade: Update documentation links
 	* articles/application-pygtk-glade: Update documentation links
