2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
	* articles/writing-a-custom-widget-using-pygtk: Update
	documentation links

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* articles/writing-a-custom-widget-using-pygtk: Update
+	documentation links
 	* articles/wordpy-offline-blogging-tool: Update documentation links
 	* articles/subclassing-gobject: Update documentation links
 	and add missing Python source files
