2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
	* developer.src: update git links

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* developer.src: update git links
 	* articles/writing-a-custom-widget-using-pygtk: Update
 	documentation links
 	* articles/wordpy-offline-blogging-tool: Update documentation links
