--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* head.src: fix favicon
 	* developer.src: update git links
 	* articles/writing-a-custom-widget-using-pygtk: Update
 	documentation links
