--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-08-06  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* developer.src: remove links to resolved bugs
 	* docs/pygobject: Update reference documentation to 2.28.6
 	* docs/pygtk: Update reference documentation to 2.24.0
 	* about.src: Add John Stowers and myself to "The people
