--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-25  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Link to Bahasa Indonesia tutorial
+
 2011-08-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Fix links to win32 and win64 gtk+ bundles
