2012-08-17  Rafael Villar Burke  <pachi@rvburke.com>
	* articles.src: Update link to Indonesia tutorial
	* applications.src: Add Simple-stock and PyGTK Codes by Noprianto

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Update link to Indonesia tutorial
+	* applications.src: Add Simple-stock and PyGTK Codes by Noprianto
+
 2012-07-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Link to Bahasa Indonesia tutorial
