2013-05-26  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Pnote by Steve Kieu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-26  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Pnote by Steve Kieu
+
 2012-11-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Painter's Colour Assistant Tool Kit by Peter
