2016-02-14  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add gfdupes by Abhilash Mhaisne

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-02-14  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add gfdupes by Abhilash Mhaisne
+
 2013-05-26  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Pnote by Steve Kieu
